@@ -1,5 +1,6 @@
 Changes for 1.1.4:
 
+ - fixed graph displaying with period 1d - 2d8h (Eugene)
  - fixed hosts remembering for graphs (Eugene)
  - fixed processing of unit "uptime" (Alexei)
  - support of ListenIP for ZABBIX server (Alexei)
